

ADD_EXECUTABLE(tlvTest  main.cpp )
TARGET_LINK_LIBRARIES(tlvTest RspCommon ${ZSmartLib_zIPC_LIBRARIES} ${ZSmartLib_zUtility_LIBRARIES})

install(TARGETS tlvTest
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${BIN_INSTALL_DIR})
